# PingCastle-MCP

./: LICENSE  README.md  pyproject.toml
Windows Executable/: pingcastle-mcp.exe.sha256
docs/: CLIENTS.md
packaging/: README-build.md  _entry.py  pingcastle-mcp.spec
src/pingcastle_mcp/: __main__.py  cli.py  config.py  credentials.py  enterprise_client.py  errors.py  models.py  scanner.py  server.py
tests/: conftest.py  test_cli.py  test_config.py  test_credentials.py  test_enterprise_client.py  test_errors.py  test_models.py  test_scanner.py  test_server.py  test_smoke.py
tests/fixtures/: domains.json  report_full.json  report_full_prev.json  reports_list.json
tests/integration/: test_live.py
