[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingcastle-mcp"
version = "0.1.0"
description = "MCP server for PingCastle Enterprise"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "keyring>=24",
]

[project.scripts]
pingcastle-mcp = "pingcastle_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "pyinstaller>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/pingcastle_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
